// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDataGrid pagination renders 1`] = `
<div
  class="euiFlexGroup eui-xScroll emotion-euiFlexGroup-wrap-s-spaceBetween-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover"
    >
      <div
        class="euiPopover__anchor css-16vtueo-render"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--xSmall css-wvaqcf-empty-text"
          data-test-subj="tablePaginationPopoverButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
          >
            <span
              class="euiButtonContent__icon"
              color="inherit"
              data-euiicon-type="arrowDown"
            />
            <span
              class="euiButtonEmpty__text"
            >
              Rows per page: 6
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <nav
      aria-label="Pagination for preceding grid: test grid"
      class="euiPagination emotion-euiPagination-EuiPagination"
    >
      <span
        aria-atomic="true"
        aria-relevant="additions text"
        class="emotion-euiScreenReaderOnly"
        role="status"
      >
        Page 2 of 2
      </span>
      <a
        aria-controls="generated-id"
        aria-label="Previous page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-text-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-previous"
        href="#generated-id"
        rel="noreferrer"
        title="Previous page"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowLeft"
        />
      </a>
      <ul
        aria-label="Pagination for preceding grid: test grid"
        class="euiPagination__list emotion-euiPagination__list"
      >
        <li
          class="euiPagination__item"
        >
          <a
            aria-controls="generated-id"
            aria-label="Page 1 of 2"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-23ziaw-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-0"
            href="#generated-id"
            rel="noreferrer"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                1
              </span>
            </span>
          </a>
        </li>
        <li
          class="euiPagination__item"
        >
          <button
            aria-controls="generated-id"
            aria-current="true"
            aria-label="Page 2 of 2"
            class="euiButtonEmpty euiButtonEmpty--small euiPaginationButton css-7ubx5w-empty-disabled-euiPaginationButton-isActive"
            data-test-subj="pagination-button-1"
            disabled=""
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                2
              </span>
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-label="Next page"
        class="euiButtonIcon euiButtonIcon--xSmall euiPaginationArrowButton emotion-euiButtonIcon-empty-disabled-hoverStyles-euiPaginationArrowButton"
        data-test-subj="pagination-button-next"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
    </nav>
  </div>
</div>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-none-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-B"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="eyeClosed"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Hide column"
      >
        Hide column
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortUp"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Sort A-Z"
      >
        Sort A-Z
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortDown"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Sort Z-A"
      >
        Sort Z-A
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortLeft"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Move left"
      >
        Move left
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortRight"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Move right"
      >
        Move right
      </span>
    </button>
  </li>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 2`] = `
<ul
  class="euiListGroup emotion-euiListGroup-none-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-C"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-m"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="test"
      >
        test
      </span>
    </button>
  </li>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 3`] = `
<ul
  class="euiListGroup emotion-euiListGroup-none-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-D"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortUp"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Sort A-Z"
      >
        Sort A-Z
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortDown"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Sort Z-A"
      >
        Sort Z-A
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-m"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="test"
      >
        test
      </span>
    </button>
  </li>
</ul>
`;

exports[`EuiDataGrid render column actions renders various column actions configurations 4`] = `
<ul
  class="euiListGroup emotion-euiListGroup-none-maxWidthDefault"
  data-test-subj="dataGridHeaderCellActionGroup-E"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="eyeClosed"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="1"
      >
        1
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortUp"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="2"
      >
        2
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortDown"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="3"
      >
        3
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortLeft"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="4"
      >
        4
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-xs"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-xs-isDisabled"
      disabled=""
      type="button"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="sortRight"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="5"
      >
        5
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-m"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="test"
      >
        test
      </span>
    </button>
  </li>
</ul>
`;

exports[`EuiDataGrid rendering renders additional toolbar controls 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--xSmall euiDataGrid__controlBtn css-wvaqcf-empty-text"
                data-test-subj="dataGridColumnSelectorButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="listAdd"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Columns
                  </span>
                </span>
              </button>
            </div>
          </div>
          <button>
            Button
          </button>
        </div>
        <div
          class="euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Keyboard shortcuts"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridKeyboardShortcutsButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="keyboard"
                  />
                </button>
              </span>
            </div>
          </div>
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Display options"
                  class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridDisplaySelectorButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="tableDensityNormal"
                  />
                </button>
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <div
          class="euiDataGrid__virtualized"
          style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
        >
          <div
            style="height:102px;width:200px"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="A"
                      >
                        A
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-A"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="B"
                      >
                        B
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-B"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 3
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 3
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders control columns 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--xSmall euiDataGrid__controlBtn css-wvaqcf-empty-text"
                data-test-subj="dataGridColumnSelectorButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="listAdd"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Columns
                  </span>
                </span>
              </button>
            </div>
          </div>
          <button>
            Button
          </button>
        </div>
        <div
          class="euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Keyboard shortcuts"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridKeyboardShortcutsButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="keyboard"
                  />
                </button>
              </span>
            </div>
          </div>
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Display options"
                  class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridDisplaySelectorButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="tableDensityNormal"
                  />
                </button>
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <div
          class="euiDataGrid__virtualized"
          style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
        >
          <div
            style="height:102px;width:300px"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn leadingControlCol"
                data-gridcell-column-id="leading"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-leading"
                role="columnheader"
                style="width:50px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  <span>
                    leading heading
                  </span>
                </div>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="A"
                      >
                        A
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-A"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="2"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="B"
                      >
                        B
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-B"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
              <div
                class="euiDataGridHeaderCell euiDataGridHeaderCell--controlColumn trailingControlCol"
                data-gridcell-column-id="trailing"
                data-gridcell-column-index="3"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-trailing"
                role="columnheader"
                style="width:50px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridHeaderCell__content"
                >
                  <span>
                    trailing heading
                  </span>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      0
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - leading, column 1, row 1
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:50px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 2, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:150px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 3, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:250px;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      0
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - trailing, column 4, row 1
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      1
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - leading, column 1, row 2
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:50px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 2, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:150px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 3, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:250px;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      1
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - trailing, column 4, row 2
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="leading"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      2
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - leading, column 1, row 3
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell"
              data-gridcell-column-id="A"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:50px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 2, row 3
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell"
              data-gridcell-column-id="B"
              data-gridcell-column-index="2"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:150px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 3, row 3
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn euiDataGridRowCell--controlColumn"
              data-gridcell-column-id="trailing"
              data-gridcell-column-index="3"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:250px;top:0;height:34px;width:50px"
              tabindex="-1"
            >
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
              <div
                data-focus-lock-disabled="disabled"
              >
                <div
                  class="euiDataGridRowCell__expandFlex"
                >
                  <div
                    class="euiDataGridRowCell__expandContent"
                  >
                    <div
                      class="euiDataGridRowCell__truncate"
                      data-datagrid-cellcontent="true"
                    >
                      2
                    </div>
                    <p
                      class="emotion-euiScreenReaderOnly"
                    >
                      - trailing, column 4, row 3
                    </p>
                  </div>
                </div>
              </div>
              <div
                data-focus-guard="true"
                style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
                tabindex="-1"
              />
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders custom column headers 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--xSmall euiDataGrid__controlBtn css-wvaqcf-empty-text"
                data-test-subj="dataGridColumnSelectorButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="listAdd"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Columns
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Keyboard shortcuts"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridKeyboardShortcutsButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="keyboard"
                  />
                </button>
              </span>
            </div>
          </div>
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Display options"
                  class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridDisplaySelectorButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="tableDensityNormal"
                  />
                </button>
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <div
          class="euiDataGrid__virtualized"
          style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
        >
          <div
            style="height:102px;width:200px"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="A"
                      >
                        Column A
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-A"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="B"
                      >
                        <div>
                          More Elements
                        </div>
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-B"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 3
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 3
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;

exports[`EuiDataGrid rendering renders with common and div attributes 1`] = `
Array [
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
  <div
    class="euiDataGrid__focusWrap"
    data-focus-lock-disabled="disabled"
  >
    <div
      class="euiDataGrid euiDataGrid--bordersAll euiDataGrid--headerShade euiDataGrid--footerOverline euiDataGrid--rowHoverHighlight euiDataGrid--stickyFooter testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div
        class="euiDataGrid__controls"
        data-test-subj="dataGridControls"
      >
        <div
          class="euiDataGrid__leftControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridColumnSelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <button
                class="euiButtonEmpty euiButtonEmpty--xSmall euiDataGrid__controlBtn css-wvaqcf-empty-text"
                data-test-subj="dataGridColumnSelectorButton"
                type="button"
              >
                <span
                  class="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    class="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="listAdd"
                  />
                  <span
                    class="euiButtonEmpty__text"
                  >
                    Columns
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="euiDataGrid__rightControls"
        >
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridKeyboardShortcutsPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Keyboard shortcuts"
                  class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridKeyboardShortcutsButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="keyboard"
                  />
                </button>
              </span>
            </div>
          </div>
          <div
            class="euiPopover emotion-euiPopover"
            data-test-subj="dataGridDisplaySelectorPopover"
          >
            <div
              class="euiPopover__anchor css-16vtueo-render"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <button
                  aria-label="Display options"
                  class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
                  data-test-subj="dataGridDisplaySelectorButton"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="euiButtonIcon__icon"
                    color="inherit"
                    data-euiicon-type="tableDensityNormal"
                  />
                </button>
              </span>
            </div>
          </div>
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
          >
            <button
              aria-label="Enter fullscreen"
              class="euiButtonIcon euiButtonIcon--xSmall euiDataGrid__controlBtn emotion-euiButtonIcon-empty-text-hoverStyles"
              data-test-subj="dataGridFullScreenButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="fullScreen"
              />
            </button>
          </span>
        </div>
      </div>
      <div
        aria-label="aria-label"
        aria-rowcount="3"
        class="euiDataGrid__content"
        data-test-subj="euiDataGridBody"
        id="generated-id"
        role="grid"
        tabindex="0"
      >
        <div
          class="euiDataGrid__virtualized"
          style="position:relative;height:9007199254740991px;width:9007199254740991px;overflow:auto;-webkit-overflow-scrolling:touch;will-change:transform;direction:ltr"
        >
          <div
            style="height:102px;width:200px"
          >
            <div
              class="euiDataGridHeader"
              data-test-subj="dataGridHeader"
              role="row"
            >
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="A"
                data-gridcell-column-index="0"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-A"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="A"
                      >
                        A
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-A"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
              <div
                class="euiDataGridHeaderCell"
                data-gridcell-column-id="B"
                data-gridcell-column-index="1"
                data-gridcell-row-index="-1"
                data-gridcell-visible-row-index="-1"
                data-test-subj="dataGridHeaderCell-B"
                role="columnheader"
                style="width:100px"
                tabindex="-1"
              >
                <div
                  class="euiDataGridColumnResizer"
                  data-test-subj="dataGridColumnResizer"
                  style="margin-right:0px"
                />
                <div
                  class="euiPopover eui-fullWidth emotion-euiPopover"
                >
                  <div
                    class="euiPopover__anchor eui-fullWidth css-16vtueo-render"
                  >
                    <button
                      aria-describedby="euiDataGridCellHeader_generated-id_sorting euiDataGridCellHeader_generated-id_actions"
                      class="euiDataGridHeaderCell__button"
                    >
                      <div
                        class="euiDataGridHeaderCell__content"
                        title="B"
                      >
                        B
                      </div>
                      <span
                        class="euiDataGridHeaderCell__icon"
                        color="text"
                        data-euiicon-type="arrowDown"
                        data-test-subj="dataGridHeaderCellActionButton-B"
                      />
                    </button>
                  </div>
                </div>
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_sorting"
                />
                <p
                  hidden=""
                  id="euiDataGridCellHeader_generated-id_actions"
                >
                  Click to view column header actions
                </p>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="1"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="0"
              data-gridcell-visible-row-index="0"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    0, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 1
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="2"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="1"
              data-gridcell-visible-row-index="1"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    1, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 2
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--firstColumn"
              data-gridcell-column-id="A"
              data-gridcell-column-index="0"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:0;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, A
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - A, column 1, row 3
                  </p>
                </div>
              </div>
            </div>
            <div
              aria-rowindex="3"
              class="euiDataGridRowCell euiDataGridRowCell--lastColumn"
              data-gridcell-column-id="B"
              data-gridcell-column-index="1"
              data-gridcell-row-index="2"
              data-gridcell-visible-row-index="2"
              data-test-subj="dataGridRowCell"
              role="gridcell"
              style="position:absolute;left:100px;top:0;height:34px;width:100px"
              tabindex="-1"
            >
              <div
                class="euiDataGridRowCell__expandFlex"
              >
                <div
                  class="euiDataGridRowCell__expandContent"
                >
                  <div
                    class="euiDataGridRowCell__truncate"
                    data-datagrid-cellcontent="true"
                  >
                    2, B
                  </div>
                  <p
                    class="emotion-euiScreenReaderOnly"
                  >
                    - B, column 2, row 3
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        hidden=""
        id="generated-id"
      >
        Cell contains interactive content.
      </p>
    </div>
  </div>,
  <div
    data-focus-guard="true"
    style="width:1px;height:0px;padding:0;overflow:hidden;position:fixed;top:1px;left:1px"
    tabindex="-1"
  />,
]
`;
